Bug 1547098 - Limit the height of code in Markdown so the horizontal scrollbar can be found and used easily

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -2755,6 +2755,7 @@ pre.comment-text {
 }
 
 .markdown-body pre {
+  max-height: 600px;
   word-wrap: normal;
 }
 
